--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ title: Just the Docs
 description: A Jekyll theme for documentation
 #baseurl: "/just-the-docs" # the subpath of your site, e.g. /blog
 # url: "https://pmarsceill.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-baseurl: "/just-the-docs-tests" # the subpath of your site, e.g. /blog
+baseurl: "/blog" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
