--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ defaults:
 
 permalink: pretty
 exclude: ["node_modules/", "*.gemspec", "*.gem", "Gemfile", "Gemfile.lock", "package.json", "package-lock.json",  "script/", "LICENSE.txt", "lib/", "bin/", "README.md", "Rakefile"
-, "docs/tests/"
+, "docs/tests/", "docs-bak", "*.md-bak"
 ]
 
 # Regression tests
