--- a/_config.yml
+++ b/_config.yml
@@ -36,8 +36,7 @@ defaults:
 
 permalink: pretty
 exclude: ["node_modules/", "*.gemspec", "*.gem", "Gemfile", "Gemfile.lock", "package.json", "package-lock.json",  "script/", "LICENSE.txt", "lib/", "bin/", "README.md", "Rakefile"
-, "docs/tests/", "docs-bak/", "*.md-bak"
-]
+, "docs/tests/", "docs-bak/", "*.md-bak"]
 
 # Regression tests
 # By default, the pages in /docs/tests are excluded when the ste is built.
